# cloud-stan

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
docs/: bridgestan.md  cloud-providers.md  clusters.md  cmdstanpy.md  helm.md  security.md
examples/: __init__.py  run_bridgestan_dask.py  run_bridgestan_ray.py  run_cmdstanpy_dask.py  run_cmdstanpy_ray.py
examples/cloud/aws/: README.md  dask-values.yaml  ray-values.yaml
examples/cloud/azure/: README.md  dask-values.yaml  ray-values.yaml
examples/cloud/gcp/: README.md  dask-values.yaml  ray-values.yaml
src/cloud_stan/: __init__.py  backends.py  bridgestan.py  cmdstanpy.py  security.py
src/dask_integration/: distributed_models.py
src/ray_integration/: ray_dask_scheduler.py  ray_util.py  stan_ray_executor.py
src/stan/: bernoulli.stan
src/stan_integration/bridgestan/: dask_bridgestan.py
src/stan_integration/cmdstanpy/: dask_cmdstanpy.py  dask_on_ray_cmdstanpy.py
stan_dask_chart/: Chart.yaml  values.yaml
stan_dask_chart/templates/: _helpers.tpl  job.yaml  scheduler-deployment.yaml  scheduler-service.yaml  serviceaccount.yaml  worker-deployment.yaml
stan_ray_chart/ray_cluster/: Chart.yaml  values.yaml
stan_ray_chart/ray_cluster/templates/: _helpers.tpl  job.yaml  raycluster.yaml  serviceaccount.yaml
tests/: conftest.py  test_backends.py  test_bridgestan_wrappers.py  test_charts_examples.py  test_cmdstanpy_wrappers.py  test_config.py  test_logging.py  test_security.py
